<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.unir.gestionfarmaciaunir.vista.VistaInicial">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:labelFor="@+id/txtNombreMedicamento"
                android:layerType="software"
                android:padding="10dp"
                android:text="@string/nombre_del_medicamento"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNombreMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColorLink="@android:color/holo_blue_dark" />



            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tipo_del_medicamento" />

            <Spinner
                android:id="@+id/cmbTipoMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_medicamento"
                android:padding="10dp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/cantidad"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />



            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/distribuidor_farmaceutico" />

            <RadioGroup
                android:id="@+id/rbGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbCofarma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cofarma" />

                <RadioButton
                    android:id="@+id/rbEmpsephar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empsephar" />

                <RadioButton
                    android:id="@+id/rbCemefar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cemefar" />
            </RadioGroup>



            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sucursal" />

            <CheckBox
                android:id="@+id/chkPrincipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/principal" />

            <CheckBox
                android:id="@+id/chkSecundaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/secundaria" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btnBorrar"
                    style="android:attr/borderlessButtonStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:onClick="limpiarDatos"
                    android:text="@string/borrar" />

                <Button
                    android:id="@+id/btnOk"
                    style="android:attr/borderlessButtonStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:onClick="enviarPedido"
                    android:text="@string/ok" />

            </LinearLayout>
        </LinearLayout>



    </ScrollView>


</android.support.constraint.ConstraintLayout>
